feat: 完成服务端的基本构建
